--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ psycopg2==2.4.1
 -e git://github.com/aehlke/django-bcrypt.git#egg=django_bcrypt
 redis==2.4.11
 -e git://github.com/toastdriven/django-tastypie.git#egg=tastypie
+python-memcached
 johnny-cache==0.3.3
